# Laboratorio

./: README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml  tests.yml
blood_exam_transcriber/: __init__.py  catalog.py  cli.py  models.py  parser.py  transcriber.py
blood_exam_transcriber/data/: standard_catalog.json
docs/: app.js  index.html  style.css  transcritor.js
examples/: sample_exam.txt
exemplos/: exame_exemplo.txt
tests/: test_catalog.py  test_parser.py  test_transcriber.py  test_transcritor.py  transcritor.test.mjs
transcritor/: __init__.py  catalogo.py  metadados.py  modelos.py  normalizador.py  parser.py  texto.py  transcritor.py
