[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcritor-exames"
version = "1.0.0"
description = "Transcreve exames de sangue (texto livre ou entrada rápida) para um padrão canônico (LOINC), em nível completo ou reduzido."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[project.scripts]
transcritor = "cli:main"

[tool.setuptools]
packages = ["transcritor"]
py-modules = ["cli"]
